WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220138
Fix aspect ratio handling in RenderBox::computeLogicalWidthInFragment
https://bugs.webkit.org/show_bug.cgi?id=220138
Summary
Fix aspect ratio handling in RenderBox::computeLogicalWidthInFragment
Rob Buis
Reported
2020-12-24 00:54:58 PST
Fix aspect ratio handling in RenderBox::computeLogicalWidthInFragment
Attachments
Patch
(6.17 KB, patch)
2020-12-24 00:58 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-12-24 00:58:18 PST
Created
attachment 416741
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-12-31 00:55:14 PST
<
rdar://problem/72750992
>
EWS
Comment 3
2021-01-06 22:11:19 PST
Committed
r271223
: <
https://trac.webkit.org/changeset/271223
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416741
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug