Fix aspect ratio handling in RenderBox::computeLogicalWidthInFragment https://bugs.webkit.org/show_bug.cgi?id=220138

Patch by Rob Buis <rbuis@igalia.com> on 2021-01-06
Reviewed by Simon Fraser.

Source/WebCore:

The existing code does not respect min/max-height in the logical height
calculation, the computeLogicalWidthFromAspectRatio helper does, so use
it.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalWidthInFragment const):

LayoutTests:

Enable some tests that pass now.

* TestExpectations:

Canonical link: https://commits.webkit.org/232819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271223 268f45cc-cd09-0410-ab3c-d52691b4dbfc